took me into the city